fixed icon spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,8 +7,8 @@
 
 /* Style for social media icons */
 .social-icon {
-  width: 3rem;
-  height: 3rem;
+  width: 3.3rem;
+  height: auto;
   transition: transform 0.1s, filter 0.1s;
 }
 
@@ -82,6 +82,6 @@
 }
 #offcanvasNavbarLabel {
   font-family: "Mont-SemiBold";
-  padding-top: 8rem;
+  padding-top: 15rem;
   font-size: large;
 }
